# guidesforge

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/models/: database.py
backend/app/routers/: admin.py  analytics.py  auth.py  billing.py  guides.py  help.py  pipeline.py  sdk.py  steps.py  workspace.py
backend/app/schemas/: analytics.py  auth.py  billing.py  guides.py  pipeline.py  sdk.py  workspace.py
backend/app/services/: celery_worker.py  customerio_service.py  dodo_service.py  easebuzz_service.py  email_service.py  embedding_service.py  guide_pipeline.py  plan_limits.py  razorpay_service.py  staleness_service.py  stripe_service.py
backend/app/utils/: auth.py  s3.py
extension/: background.js  content.css  content.js  manifest.json  package-lock.json  package.json  popup.html  popup.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: llms.txt  robots.txt  sdk.js  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Analytics.tsx  Billing.tsx  ContactSales.tsx  Dashboard.tsx  EmbedViewer.tsx  ForgotPassword.tsx  GuideEditor.tsx  GuideViewer.tsx  HelpCenter.tsx  (+9 more)
hocuspocus/: Dockerfile  package-lock.json  package.json  server.js
modal/: app.py
sdk/: build.mjs  package.json
sdk/src/: index.ts
(+14 files in other folders)
